cabal-version:       3.4
name:                hbgp
version:             3.0.0.2
license:             Apache-2.0
license-file:        LICENSE
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Network
extra-source-files:  README.md
build-type:          Simple

common base
  other-extensions:   DataKinds, MultiParamTypeClasses, FunctionalDependencies, ForeignFunctionInterface, TypeSynonymInstances, FlexibleContexts, ConstrainedClassMethods
  build-depends:      mtl , text, simple-logger, filepath, gitrev, transformers, haskeline, base , bytestring , iproute , attoparsec , attoparsec-binary , base16-bytestring , pretty-hex , io-streams , network , binary , containers , time , unix , sorted-list , hashable , unordered-containers , sorted-list , murmur-hash , extra , deepseq
  default-extensions: OverloadedStrings , RecordWildCards , DuplicateRecordFields, MultiWayIf, FlexibleInstances, TupleSections,DeriveGeneric, BangPatterns
  default-language:   Haskell2010

common bgplib
  import:             base
  build-depends:	    base, binary, deepseq, iproute, network, bytestring, attoparsec, attoparsec-binary, hashable, base16-bytestring, bytestring-strict-builder, murmur-hash
  other-modules:      BGPlib.Update, BGPlib.PrefixBuilder, BGPlib.BGPHandle, BGPlib.AttoBGP , BGPlib.BGPMessage, BGPlib.ASPath, BGPlib.AttoBGP, BGPlib.BGPlib, BGPlib.Capabilities, BGPlib.Codes, BGPlib.LibCommon, BGPlib.PathAttributeUtils, BGPlib.PathAttributes, BGPlib.Prefixes, BGPlib.RFC4271, BGPlib.PathAttributeBuilder
  default-language:   Haskell2010

common bgprib
  import:             base, bgplib
  other-modules:      BGPRib.PT, BGPRib.AdjRIBOut , BGPRib.BGPData , BGPRib.BGPReader , BGPRib.BGPRib , BGPRib.BogonFilter , BGPRib.Common , BGPRib.Fifo , BGPRib.PathFilter , BGPRib.PrefixTable , BGPRib.PrefixTableUtils , BGPRib.Rib

executable hbgp
  import:             base , bgplib , bgprib
  other-modules:      Paths_hbgp , Router.Monitor, Router.Console, Router.BgpFSM , Router.Collision , Router.Config , Router.Global ,  Router.Open , Router.Redistributor , Router.StdRib , Session.Session , ZServ.Debug , ZServ.WireFormat , ZServ.ZMsg , ZServ.ZMsgBinary , ZServ.ZServ , ZServ.ZSpec
  main-is:            Router/Router.hs
