cabal-version:       3.0
name:                hbgp
version:             3.1.0.3
license:             Apache-2.0
license-file:        LICENSE
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Network
extra-source-files:  README.md
build-type:          Simple

common base
  other-extensions:   DataKinds, DuplicateRecordFields, RecordWildCards, MultiWayIf, OverloadedStrings, FlexibleInstances, TupleSections, Strict, MultiParamTypeClasses, FunctionalDependencies, ForeignFunctionInterface, TypeSynonymInstances, FlexibleContexts, DeriveGeneric, BangPatterns, ConstrainedClassMethods
  build-depends:      yaml, text, aeson, raw-strings-qq, filepath, gitrev, transformers, haskeline, base , bytestring , iproute , attoparsec , attoparsec-binary , base16-bytestring , pretty-hex , io-streams , network , binary , containers , time , unix , sorted-list , hashable , unordered-containers , sorted-list , murmur-hash , extra , deepseq
  default-language:   Haskell2010
  ghc-options:        -Wno-x-partial

common bgprib
  other-modules:      BGPRib.PTE, BGPRib.AdjRIBOut , BGPRib.BGPData , BGPRib.BGPReader , BGPRib.BGPRib , BGPRib.BogonFilter , BGPRib.Common , BGPRib.Fifo , BGPRib.PathFilter , BGPRib.PrefixTable , BGPRib.PrefixTableUtils , BGPRib.Rib

common bgplib
  build-depends:	    base, binary, deepseq, iproute, network, bytestring, attoparsec, attoparsec-binary, hashable, base16-bytestring, bytestring-strict-builder, murmur-hash
  other-modules:      BGPlib.Update, BGPlib.PrefixBuilder, BGPlib.BGPHandle, BGPlib.AttoBGP , BGPlib.BGPMessage, BGPlib.ASPath, BGPlib.AttoBGP, BGPlib.BGPlib, BGPlib.Capabilities, BGPlib.Codes, BGPlib.LibCommon, BGPlib.PathAttributeUtils, BGPlib.PathAttributes, BGPlib.Prefixes, BGPlib.RFC4271, BGPlib.PathAttributeBuilder
  default-language:   Haskell2010

-- executable hbgp.event
--   import:             base , bgplib , bgprib
--   other-modules:      Paths_hbgp , Router.Monitor, Router.Console, Router.BgpFSM , Router.Collision , Router.Config , Router.Global , Router.Log , Router.Open , Router.Redistributor , Router.StdRib , Session.Session , ZServ.Debug , ZServ.WireFormat , ZServ.ZMsg , ZServ.ZMsgBinary , ZServ.ZServ , ZServ.ZSpec
--   main-is:            Router/Router.hs
--   default-language:   Haskell2010
--   cpp-options:        -DLOGMODE=Event

-- executable hbgp.debug
--   import:             base , bgplib , bgprib
--   other-modules:      Paths_hbgp , Router.Monitor, Router.Console, Router.BgpFSM , Router.Collision , Router.Config , Router.Global , Router.Log , Router.Open , Router.Redistributor , Router.StdRib , Session.Session , ZServ.Debug , ZServ.WireFormat , ZServ.ZMsg , ZServ.ZMsgBinary , ZServ.ZServ , ZServ.ZSpec
--   main-is:            Router/Router.hs
--   default-language:   Haskell2010
--   cpp-options:        -DLOGMODE=Debug

executable hbgp.info
  import:             base , bgplib , bgprib
  other-modules:      Paths_hbgp , Router.Monitor, Router.Console, Router.BgpFSM , Router.Collision , Router.Config , Router.Global , Router.Log , Router.Open , Router.Redistributor , Router.StdRib , Session.Session , ZServ.Debug , ZServ.WireFormat , ZServ.ZMsg , ZServ.ZMsgBinary , ZServ.ZServ , ZServ.ZSpec
  main-is:            Router/Router.hs
  default-language:   Haskell2010
  cpp-options:        -DLOGMODE=Info

-- executable hbgp.warn
--   import:             base , bgplib , bgprib
--   other-modules:      Paths_hbgp , Router.Monitor, Router.Console, Router.BgpFSM , Router.Collision , Router.Config , Router.Global , Router.Log , Router.Open , Router.Redistributor , Router.StdRib , Session.Session , ZServ.Debug , ZServ.WireFormat , ZServ.ZMsg , ZServ.ZMsgBinary , ZServ.ZServ , ZServ.ZSpec
--   main-is:            Router/Router.hs
--   default-language:   Haskell2010
--   cpp-options:        -DLOGMODE=Warn
