cabal-version:       3.4
name:                hbgp-extras
version:             3.0.0.2
license:             Apache-2.0
license-file:        LICENSE
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Network
extra-source-files:  README.md
build-type:          Simple

common base
  other-extensions:   DataKinds,  Strict, MultiParamTypeClasses, FunctionalDependencies, ForeignFunctionInterface, TypeSynonymInstances, FlexibleContexts, ConstrainedClassMethods
  build-depends:      text, simple-logger, filepath, gitrev, transformers, haskeline, base , bytestring , iproute , attoparsec , attoparsec-binary , base16-bytestring , pretty-hex , io-streams , network , binary , containers , time , unix , sorted-list , hashable , unordered-containers , sorted-list , murmur-hash , extra , deepseq
  default-extensions: OverloadedStrings , RecordWildCards , DuplicateRecordFields, MultiWayIf, FlexibleInstances, TupleSections,DeriveGeneric, BangPatterns
  default-language:   Haskell2010

common bgplib
  import:             base
  build-depends:	    bytestring-strict-builder

  -- build-depends:	    binary,  network,  bytestring-strict-builder
  other-modules:      BGPlib.Update, BGPlib.PrefixBuilder, BGPlib.BGPHandle, BGPlib.AttoBGP , BGPlib.BGPMessage, BGPlib.ASPath, BGPlib.AttoBGP, BGPlib.BGPlib, BGPlib.Capabilities, BGPlib.Codes, BGPlib.LibCommon, BGPlib.PathAttributeUtils, BGPlib.PathAttributes, BGPlib.Prefixes, BGPlib.RFC4271, BGPlib.PathAttributeBuilder
  default-language:   Haskell2010

common bgprib
  import:             base, bgplib
  other-modules:      BGPRib.PT, BGPRib.AdjRIBOut , BGPRib.BGPData , BGPRib.BGPReader , BGPRib.BGPRib , BGPRib.BogonFilter , BGPRib.Common , BGPRib.Fifo , BGPRib.PathFilter , BGPRib.PrefixTable , BGPRib.PrefixTableUtils , BGPRib.Rib

-- common hbgp
--  import:             base , bgplib , bgprib
--  other-modules:      Paths_hbgp , Router.Monitor, Router.Console, Router.BgpFSM , Router.Collision , Router.Config , Router.Global , Router.Log , Router.Open , Router.Redistributor , Router.StdRib , Session.Session , ZServ.Debug , ZServ.WireFormat , ZServ.ZMsg , ZServ.ZMsgBinary , ZServ.ZServ , ZServ.ZSpec

executable mrtdump
  import:             base , bgplib , bgprib
  build-depends:      zlib , array
  main-is:		        MRTrib-dump.hs
  hs-source-dirs:	    MRT/lib , MRT/app , .
  default-language:	  Haskell2010
  other-modules:	    MRTBuilder, MRTPrefixes, MRTformat, MRTlib, MRTrib, BogonFilter

executable parsetest
  import:             base , bgplib
  main-is:            Router/ParserTest.hs
  other-modules:      Router.BGPPingParser

executable bgpping
  import:             base , bgplib
  main-is:            Router/BGPPing.hs
  other-modules:      Router.BGPPingParser, Router.BGPConnect

executable bgpclient
  import:             base , bgplib
  main-is:            Router/BGPClient.hs
  other-modules:      Router.BGPConnect

executable bgpserv
  import:             base , bgplib
  main-is:            Router/BGPServer.hs
  other-modules:      Router.BGPConnect

executable bgprelay
  import:             base , bgplib
  main-is:            Router/BGPRelay.hs
  other-modules:      Router.BGPConnect, Router.BGPPingParser
